--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>Hello Hipster Puppies!</h1>
+          <h1>Cool Puppies!</h1>
           <h2>
-            Puppy Hipster is the place that all famous hipster puppies go!
+            Puppy Hipster is the awesome place that all famous hipster puppies go!
           </h2>
         </div>
 
